16 bit, 233 px update, still stutters but higher fps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,4 @@ pico_enable_stdio_uart(rp2350_dma_player 1)
 
 pico_add_extra_outputs(rp2350_dma_player)
 
-add_definitions(-DENABLE_DEBUG_PRINT) 
+# add_definitions(-DENABLE_DEBUG_PRINT) 
