Revamp README for clarity and sass, highlighting performance upgrades and new features. Update SD reading to 64KB chunks for optimal speed. Refine main.c for improved DMA handling and buffer management, ensuring smooth 30fps playback. Tweak display logic for better frame processing and eliminate duplication artifacts. Because who doesn't love a little extra flair?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
     "spi.h": "c",
     "bsp_co5300.h": "c",
     "string.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "i2c.h": "c"
   }
 }
